--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
   "builds": [
       {
           "src": "./server.py",
-          "use": "@vercel/python"
+          "use": "@vercel/python",
+            "config": { 
+                "excludeFiles": "{.next,*.cache,node_modules,public,app}/**"
+      }
       }
   ],
   "routes": [
